Atualizações nos templates e estilos conforme orientação

--- a/escola/templates/cadastros/_adicionar_aluno_content.html
+++ b/escola/templates/cadastros/_adicionar_aluno_content.html
@@ -142,6 +142,9 @@
         <a href="{{ url_for('alunos_bp.listar_alunos') }}" class="button btn-secondary">
             <i class="fas fa-times"></i> Cancelar
         </a>
+        <a href="{{ url_for('cadastros_bp.gerenciar_lideres') }}" class="btn btn-warning" style="margin-bottom:10px;">
+            <i class="fas fa-user-crown"></i> Cadastrar Líder
+        </a>
     </div>
 </form>
 
