--- a/escola/templates/disciplinar/tratar_rfo.html
+++ b/escola/templates/disciplinar/tratar_rfo.html
@@ -39,7 +39,17 @@
         <!-- Aluno(s) Envolvido(s) -->
         <h4><i class="fas fa-user-graduate"></i> Aluno(s) Envolvido(s)</h4>
         <div class="detail-item">
-        {% if ocorrencia.alunos_list %}
+        {# AJUSTE: Exibir só o líder quando elogio coletivo, senão exibir todos os alunos #}
+        {% set tipo_val = (ocorrencia.get('tratamento_tipo') or ocorrencia.get('tipo_rfo') or ocorrencia.get('tipo_ocorrencia_nome') or '')|lower %}
+        {% set subtipo_val = (ocorrencia.get('subtipo_elogio') or '')|lower %}
+
+        {% if tipo_val == 'elogio' and subtipo_val == 'coletivo' %}
+            <div>
+                <strong>Nome:</strong> {{ ocorrencia.nome_aluno or '-' }}<br/>
+                <strong>Matrícula:</strong> {{ ocorrencia.matricula or '-' }}<br/>
+                <strong>Série/Turma:</strong> {{ ocorrencia.series_turmas or (ocorrencia.serie ~ ' - ' ~ ocorrencia.turma)|default('-') }}
+            </div>
+        {% elif ocorrencia.alunos_list %}
             <ul class="list-unstyled mb-0">
             {% for al in ocorrencia.alunos_list %}
                 <li class="mb-3">
