--- a/escola/templates/disciplinar/tratar_rfo.html
+++ b/escola/templates/disciplinar/tratar_rfo.html
@@ -39,15 +39,16 @@
         <!-- Aluno(s) Envolvido(s) -->
         <h4><i class="fas fa-user-graduate"></i> Aluno(s) Envolvido(s)</h4>
         <div class="detail-item">
-        {# AJUSTE: Exibir só o líder quando elogio coletivo, senão exibir todos os alunos #}
+        {# Bloco AJUSTADO para mostrar só o líder correto e série/turma apenas uma vez #}
         {% set tipo_val = (ocorrencia.get('tratamento_tipo') or ocorrencia.get('tipo_rfo') or ocorrencia.get('tipo_ocorrencia_nome') or '')|lower %}
         {% set subtipo_val = (ocorrencia.get('subtipo_elogio') or '')|lower %}
 
         {% if tipo_val == 'elogio' and subtipo_val == 'coletivo' %}
+            {# Mostra apenas o líder #}
             <div>
-                <strong>Nome:</strong> {{ ocorrencia.nome_aluno or '-' }}<br/>
-                <strong>Matrícula:</strong> {{ ocorrencia.matricula or '-' }}<br/>
-                <strong>Série/Turma:</strong> {{ ocorrencia.series_turmas or (ocorrencia.serie ~ ' - ' ~ ocorrencia.turma)|default('-') }}
+                <strong>Nome:</strong> {{ lider_nome or ocorrencia.nome_lider or ocorrencia.nome_aluno or '-' }}<br/>
+                <strong>Matrícula:</strong> {{ matricula_lider or ocorrencia.matricula_lider or ocorrencia.matricula or '-' }}<br/>
+                <strong>Série/Turma:</strong> {{ serie_turma_lider or ocorrencia.serie_lider ~ ' - ' ~ ocorrencia.turma_lider or ocorrencia.series_turmas or (ocorrencia.serie ~ ' - ' ~ ocorrencia.turma)|default('-') }}
             </div>
         {% elif ocorrencia.alunos_list %}
             <ul class="list-unstyled mb-0">
