Atualizações nos templates e estilos conforme orientação

--- a/escola/templates/visualizacoes/visualizar_por_turma.html
+++ b/escola/templates/visualizacoes/visualizar_por_turma.html
@@ -84,7 +84,7 @@ document.querySelectorAll('.btn-definir-lider').forEach(btn => {
             }
         }
         // Chama o backend para definir o novo líder
-        fetch('/definir_lider/', {
+        fetch('/alunos/definir_lider/', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
