Atualizações nos templates e estilos conforme orientação

--- a/escola/templates/cadastros/gerenciar_alunos.html
+++ b/escola/templates/cadastros/gerenciar_alunos.html
@@ -11,7 +11,7 @@
       <a href="{{ url_for('visualizacoes_bp.listar_alunos') }}" class="btn btn-outline-primary" style="padding:9px 14px;height:39px;align-self:center;">
           <i class="fas fa-eye"></i> Visualizar Alunos
       </a>
-      <a href="{{ url_for('cadastros_bp.gerenciar_lideres') }}" class="btn btn-warning">Gerenciar Líderes</a>
+      {# <a href="{{ url_for('cadastros_bp.gerenciar_lideres') }}" class="btn btn-warning">Gerenciar Líderes</a> #}
   </div>
 
   <div class="manage-tabs-content">
