--- a/escola/templates/disciplinar/fmd_novo_pdf.html
+++ b/escola/templates/disciplinar/fmd_novo_pdf.html
@@ -93,7 +93,7 @@
 
     <div class="section">
         <span class="label">Há necessidade de comparecimento do responsável?</span>
-        {% if fmd.comparecimento_responsavel %}
+        {% if fmd.comparecimento_responsavel == 1 or fmd.comparecimento_responsavel == '1' %}
             ( X ) sim   (   ) não
             <br>
             <span class="label">Prazo para comparecimento: </span>
@@ -105,6 +105,10 @@
             {% else %}
                 -
             {% endif %}
+        {% else %}
+            (   ) sim   ( X ) não
+            <br>
+            <span class="label">Prazo para comparecimento: </span>-
         {% endif %}
     </div>
 
